# tutorial-pycon26-polars-dataframely

./: LICENSE.md  README.md  pixi.toml  pyproject.toml  tutorial.ipynb
data/: README.md  models.parquet
pipeline/: _internal.py  data.py  orchestration.py  preprocess.py  report.py
pipeline/schema/: preprocessed.py  raw.py  report.py
tests/: test_report.py
